--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "dist/",
     "ios/",
     "android/",
-    "NativeAudio.podspec"
+    "CapacitorCommunityNativeAudio.podspec"
   ],
   "keywords": [
     "capacitor",
