--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "devDependencies": {
     "@capacitor/android": "2.4.6",
     "@capacitor/ios": "2.4.6",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^7.15.1",
     "husky": "^4.2.5",
     "np": "^6.2.4",
     "prettier": "^2.0.5",
